@@ -62,7 +62,7 @@ def mol_hide(s):
            [ 0, ''          , ''                                ],
            [ 1, 'main chain', 'cmd.hide("((byres ('+s+'))&(n. c,o,h|(n. n&!r. pro)))")' ],
            [ 1, 'side chain', 'cmd.hide("((byres ('+s+'))&!(n. ca,c,o,h|(n. n&!r. pro)))")' ],
-           [ 1, 'waters'    , 'cmd.hide("(resn HOH+WAT and ('+s+'))")'     ],                      
+           [ 1, 'waters'    , 'cmd.hide("(solvent and ('+s+'))")'     ],                      
            [ 0, ''          , ''                                ],
            [ 1, 'hydrogens' , 'cmd.hide("('+s+' and hydro)")'   ],
            [ 0, ''          , ''                                ],           
@@ -455,7 +455,7 @@ def mol_action(s):
            [ 0, ''          ,''                                              ],
            [ 1, 'add hydrogens'  ,'cmd.h_add("'+s+'")'     ],           
            [ 1, 'remove hydrogens'  ,'cmd.remove("(hydro and ('+s+'))")'     ],           
-           [ 1, 'remove waters'  ,'cmd.remove("(resn HOH+WAT and ('+s+'))")'     ],
+           [ 1, 'remove waters'  ,'cmd.remove("(solvent and ('+s+'))")'     ],
            [ 0, ''          ,''                                              ],
            [ 1, 'state'      , state(s)         ],                      
            [ 1, 'selection'      , selection(s)         ],
@@ -522,7 +522,7 @@ def all_action(s):
            [ 0, ''          ,''                                              ],
            [ 1, 'add hydrogens' ,'cmd.h_add("'+s+'")'     ],           
            [ 1, 'remove hydrogens'  ,'cmd.remove("(elem h and ('+s+'))")'     ],
-           [ 1, 'remove waters'  ,'cmd.remove("(resn HOH+WAT and ('+s+'))")'     ],                      
+           [ 1, 'remove waters'  ,'cmd.remove("(solvent and ('+s+'))")'     ],                      
            [ 0, ''          ,''                                              ],
            [ 1, 'selection'      , selection(s)         ],                      
            [ 1, 'movement'       , movement(s)         ],
